--- a/index.html
+++ b/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>DevOps Web App</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DevOps CI/CD Automation</title>
+
+<style>
+    body {
+        margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+        color: white;
+        text-align: center;
+    }
+
+    .container {
+        padding-top: 120px;
+    }
+
+    h1 {
+        font-size: 48px;
+        margin-bottom: 10px;
+        animation: fadeIn 2s ease-in-out;
+    }
+
+    h2 {
+        color: #00ffd5;
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-size: 18px;
+        color: #d3d3d3;
+        margin-bottom: 30px;
+    }
+
+    .status {
+        display: inline-block;
+        padding: 12px 25px;
+        background-color: #00ffd5;
+        color: black;
+        border-radius: 25px;
+        font-weight: bold;
+        box-shadow: 0 0 15px #00ffd5;
+    }
+
+    .footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        padding: 15px;
+        background-color: rgba(0,0,0,0.3);
+        font-size: 14px;
+    }
+
+    @keyframes fadeIn {
+        from {opacity: 0; transform: translateY(-20px);}
+        to {opacity: 1; transform: translateY(0);}
+    }
+</style>
+
 </head>
+
 <body>
-<h1>Hello DevOps Automation</h1>
-<p>This website is deployed using CI/CD pipeline.</p>
+
+<div class="container">
+
+<h1>🚀 DevOps Automation Pipeline</h1>
+
+<h2>CI/CD Successfully Implemented</h2>
+
+<p>
+This website is automatically built and deployed using<br>
+GitHub Actions, Slack ChatOps, and Netlify Continuous Deployment.
+</p>
+
+<div class="status">
+✅ Deployment Status: SUCCESS
+</div>
+
+</div>
+
+<div class="footer">
+Developed by Sid Nauti | DevOps Virtual Lab Experiment | CI/CD with GitHub Actions & Netlify
+</div>
+
 </body>
 </html>
